--- a/medi/clinic.html
+++ b/medi/clinic.html
@@ -79,36 +79,24 @@
     </div>
     <!-- contact section end -->
     <!-- footer section start -->
-    <div class="footer_section layout_padding margin_top_0">
+    <div class="footer_section layout_padding">
       <div class="container">
         <div class="row">
           <div class="col">
-            <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
-            <p class="footer_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of </p>
+            <div class="footer_logo"><a href="index.html"><img src="images/logo.png"></a></div>
+            <p class="footer_text">Salud Online: Cuidando tu bienestar, ¡siempre a tu alcance!</p>
           </div>
           <div class="col">
-            <h3 class="categories_text">Categories</h3>
-            <p class="medicines_text">Medicines</p>
-            <p class="medicines_text">Skin Care</p>
-            <p class="medicines_text">Vitamins & Supplements</p>
-            <p class="medicines_text">Reflex Hammer</p>
+            <h3 class="categories_text">Contactanos</h3>
+            <p class="medicines_text">Celular: (310)3977412 </p>
+            <p class="medicines_text">Correo: ejemplo@gmail.com  </p>
+            <p class="medicines_text">Meet: ejemplo@gmail.com</p>
+            <p class="medicines_text">Salud Online</p>
           </div>
+
+
           <div class="col">
-            <h3 class="categories_text">Account</h3>
-            <p class="medicines_text">Wishlist</p>
-            <p class="medicines_text">Compare</p>
-            <p class="medicines_text">Subscribe</p>
-            <p class="medicines_text">Log in</p>
-          </div>
-          <div class="col">
-            <h3 class="categories_text">Quick Links</h3>
-            <p class="medicines_text">Shipping & Returns</p>
-            <p class="medicines_text">Privacy Policy</p>
-            <p class="medicines_text">Terms & Conditions</p>
-            <p class="medicines_text">Vacancie</p>
-          </div>
-          <div class="col">
-            <h3 class="categories_text">Promotions</h3>
+            <h3 class="categories_text">Nuestro equipo</h3>
             <div class="image_11"><img src="images/img-11.png"></div>
           </div>
         </div>
