--- a/medi/index.html
+++ b/medi/index.html
@@ -96,19 +96,19 @@
               <div class="image_2"><img src="images/img-2.png"></div>
               <h4 class="hight_text">Inicio de Sesión Seguro</h4>
               <p class="long_text_1">Accede de forma segura a tu cuenta en Salud Online y gestiona tus citas médicas con tranquilidad.</p>
-              <div class="read_bt1"><a href="#">Read More</a></div>
+              <div class="read_bt1"><a href="clinic.html">Inicia  tu sesión</a></div>
             </div>
             <div class="col-sm-4">
               <div class="image_2"><img src="images/img-3.png"></div>
               <h4 class="hight_text">Registro de Usuarios</h4>
               <p class="long_text_1">Regístrate en Salud Online para obtener acceso rápido y fácil a nuestros servicios de agendamiento de citas y más.</p>
-              <div class="read_bt1"><a href="#">Read More</a></div>
+              <div class="read_bt1"><a href="contact.html">Registrate</a></div>
             </div>
             <div class="col-sm-4">
               <div class="image_2"><img src="images/img-4.png"></div>
               <h4 class="hight_text">Agendamiento de Citas</h4>
               <p class="long_text_1">Programa tus citas médicas de manera conveniente con Salud Online, sin demoras ni complicaciones.</p>
-              <div class="read_bt1"><a href="#">Read More</a></div>
+              <div class="read_bt1"><a href="client.html">Agenda tu cita</a></div>
             </div>
           </div>
         </div>
@@ -121,32 +121,20 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
-            <p class="footer_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of </p>
+            <div class="footer_logo"><a href="index.html"><img src="images/logo.png"></a></div>
+            <p class="footer_text">Salud Online: Cuidando tu bienestar, ¡siempre a tu alcance!</p>
           </div>
           <div class="col">
-            <h3 class="categories_text">Categories</h3>
-            <p class="medicines_text">Medicines</p>
-            <p class="medicines_text">Skin Care</p>
-            <p class="medicines_text">Vitamins & Supplements</p>
-            <p class="medicines_text">Reflex Hammer</p>
+            <h3 class="categories_text">Contactanos</h3>
+            <p class="medicines_text">Celular: (310)3977412 </p>
+            <p class="medicines_text">Correo: ejemplo@gmail.com  </p>
+            <p class="medicines_text">Meet: ejemplo@gmail.com</p>
+            <p class="medicines_text">Salud Online</p>
           </div>
+
+
           <div class="col">
-            <h3 class="categories_text">Account</h3>
-            <p class="medicines_text">Wishlist</p>
-            <p class="medicines_text">Compare</p>
-            <p class="medicines_text">Subscribe</p>
-            <p class="medicines_text">Log in</p>
-          </div>
-          <div class="col">
-            <h3 class="categories_text">Quick Links</h3>
-            <p class="medicines_text">Shipping & Returns</p>
-            <p class="medicines_text">Privacy Policy</p>
-            <p class="medicines_text">Terms & Conditions</p>
-            <p class="medicines_text">Vacancie</p>
-          </div>
-          <div class="col">
-            <h3 class="categories_text">Promotions</h3>
+            <h3 class="categories_text">Nuestro equipo</h3>
             <div class="image_11"><img src="images/img-11.png"></div>
           </div>
         </div>
